Migrate to Gradle and Java 11. Update IdP code to work with the latest common code.